tests/baselines/reference/arrayTypeOfTypeOf.errors.txt
tests/cases/conformance/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf.ts(6,22): error TS1005: ',' expected.
tests/cases/conformance/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf.ts(6,30): error TS1109: Expression expected.
tests/cases/conformance/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf.ts(7,22): error TS1005: ',' expected.
tests/cases/conformance/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf.ts(7,32): error TS1109: Expression expected.


==== tests/cases/conformance/types/specifyingTypes/typeLiterals/arrayTypeOfTypeOf.ts (4 errors) ====
    // array type cannot use typeof.
    
    var x = 1;
    var xs: typeof x[];  // Not an error.  This is equivalent to Array<typeof x>
    var xs2: typeof Array;
    var xs3: typeof Array<number>;
                         ~
!!! error TS1005: ',' expected.
                                 ~
!!! error TS1109: Expression expected.
    var xs4: typeof Array<typeof x>;
                         ~
!!! error TS1005: ',' expected.
                                   ~
!!! error TS1109: Expression expected.